--- a/7mongoDB/views/partials/navbar.ejs
+++ b/7mongoDB/views/partials/navbar.ejs
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
+        <li><a href="/blogs">Blogs</a></li>
         <li><a href="/createBlogs">Create Blog</a></li>
     </ul>
 </nav>
