--- a/7mongoDB/views/createBlogs.ejs
+++ b/7mongoDB/views/createBlogs.ejs
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>add new blogs</h1>
+    <div>
+    <h1>Add new blogs</h1>
+    <div>
+        <form action="/blogs" method="POST">
+            <label for="title">Blog title: </label>
+            <input type="text" placeholder="enter title" name="tile" id="title">
+            <label for="snippet">Blog snippet: </label>
+            <input type="text" placeholder="enter snippet" name="snippet" id="snippet">
+            <label for="body">Blog body</label>
+            <input type="text" placeholder="enter body" name="body" id="body">
+
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+    </div>
 </body>
 </html>
