--- a/7mongoDB/views/partials/navbar.ejs
+++ b/7mongoDB/views/partials/navbar.ejs
@@ -3,6 +3,6 @@
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/blogs">Blogs</a></li>
-        <li><a href="/createBlogs">Create Blog</a></li>
+        <li><a href="/blogs/createBlogs">Create Blog</a></li>
     </ul>
 </nav>
