Lesson 8 completed under lesson 7

--- a/7mongoDB/views/createBlogs.ejs
+++ b/7mongoDB/views/createBlogs.ejs
@@ -11,7 +11,7 @@
     <div>
         <form action="/blogs" method="POST">
             <label for="title">Blog title: </label>
-            <input type="text" placeholder="enter title" name="tile" id="title">
+            <input type="text" placeholder="enter title" name="title" id="title">
             <label for="snippet">Blog snippet: </label>
             <input type="text" placeholder="enter snippet" name="snippet" id="snippet">
             <label for="body">Blog body</label>
