--- a/7mongoDB/views/blogs.ejs
+++ b/7mongoDB/views/blogs.ejs
@@ -8,7 +8,12 @@
     <div>
         <% if (blogs.length > 0) { %>
          <% blogs.map((blog)=>{ %>
+        <div>
+        <a href="/blogs/<%= blog.id%>" class="single">
          <h1><%= blog.title %></h1>
+         <p><%= blog.snippet%></p>
+         </a>
+         </div>
        <% }) }%>
     </div>
  </div>
