--- a/7mongoDB/views/details.ejs
+++ b/7mongoDB/views/details.ejs
@@ -7,7 +7,7 @@
     <div class="details">
      <% if(blog){ %>
         <h1><%= blog.title%></h1>
-        <p><%= blog.snippet%></p>
+        <p><%= blog.body%></p>
         <a class="delete" href="" data-doc="<%= blog.id%>">delete</a>
      <% } else { %>
         <p>Page cannot be found, might be deleted or wrong url.</p>
